feat: WorldMapFactory instead of CustomPopulateAction